--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -14,16 +14,16 @@
     </div>
 
     <div class="form-group">
-        <label for="password1">Password</label>
+        <label for="password">Password</label>
         <input
             type="password"
             class="form-control"
-            id="password1"
-            name="password1"
+            id="password"
+            name="password"
             placeholder="Enter password"/>
     </div>
     <br />
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="login" class="btn btn-primary">Login</button>
 </form>
 
 {% endblock %}
