--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,2 +1,21 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %}
-{% block content %}<h1>This is the homepage</h1>{% endblock %}
+{% block content %}
+
+<br/>
+<h1 align="center">Notes</h1>
+<br/>
+<ul class="list-group list-group-flush" id="Notes">
+    {% for note in user.Notes %}
+    <li class="list-group-item">{{ note.data }}</li>
+    {% endfor %}
+</ul>
+<form method = 'POST'>
+    <textarea name="note" id="note" class="form-control"></textarea>
+    <br/>
+    <div align="center">
+        <button type ="submit" class="butn btn-primary">Add Note</button>
+    </div>
+
+</form>
+
+{% endblock %}
