Created index.js to write javascript which helps to remove something from notes easily.

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -86,10 +86,10 @@
             crossorigin="anonymous"
         ></script>
 
-        <script>
+        <script
             type="text/javascript"
             src="{{url_for('static', filename='index.js') }}"
-        </script>
+        ></script>
 
     </body>
 
