--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -6,7 +6,12 @@
 <br/>
 <ul class="list-group list-group-flush" id="Notes">
     {% for note in user.Notes %}
-    <li class="list-group-item">{{ note.data }}</li>
+    <li class="list-group-item">
+        {{ note.data }}
+        <button type="button" class="close" onClick="deleteNote({{ note.id }})">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </li>
     {% endfor %}
 </ul>
 <form method = 'POST'>
