--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -22,7 +22,7 @@
     
     
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-light bg-warning">
             <button class="nav-toggler" type="button" data-toggle="collapse" data-target="#navbar">
                 <span class = "navbar-toggler-icon"></span>
             </button>
