Created a new requestpasswordreset.html file to create a template for requesting the user to provide their email as part of their password reset. Also, I created a link in the login template where the user can click on reset password.

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <br/>
-<h1 align="center">Notes</h1>
+<h1 align="center">Tasks</h1>
 <br/>
 <ul class="list-group list-group-flush" id="Notes">
     {% for note in user.Notes %}
@@ -18,7 +18,7 @@
     <textarea name="note" id="note" class="form-control"></textarea>
     <br/>
     <div align="center">
-        <button type ="submit" class="butn btn-primary">Add Note</button>
+        <button type ="submit" class="butn btn-primary">Add Task</button>
     </div>
 
 </form>
