--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -24,6 +24,7 @@
     </div>
     <br />
     <button type="login" class="btn btn-primary">Login</button>
+    <a href="{{url_for('login_auth.requestpasswordreset')}}">Forget Password</a>
 </form>
 
 {% endblock %}
